# flash-attention-prebuild

./: .gitignore  Dockerfile  README.md  build.sh  build_new.sh  build_per_sm.sh  cibuildwheel.toml  pyproject.toml  torch_cuda_sm_matrix.csv
