[project]
name = "flash-attention-build"
description = "Flash Attention Build is a Python package that provides a Flash Attention"
version = "2025.9.16.0"
authors = [{name = "minamik", email = "mia@sync.dev"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pip",
    "setuptools",
    "wheel",
    "packaging",
    "build"
]
