[build-system]
requires = ["setuptools>=61.0", "wheel", "ninja", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-attention-prebuild"
version = "0.1.0"
description = "Pre-built Flash Attention wheels for multiple PyTorch/CUDA configurations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "minamik", email = "mia@sync.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "cibuildwheel>=2.16.0",
    "uv>=0.4.0",
]

[tool.cibuildwheel]
# cibuildwheel configuration is in cibuildwheel.toml

[tool.setuptools]
packages = []
